fix navbar logo overflow

--- a/client_react/src/components/card/style.css
+++ b/client_react/src/components/card/style.css
@@ -25,7 +25,8 @@
 }
 
 nav {
-  background-color: rgb(22, 22, 21)
+  background-color: rgb(22, 22, 21);
+  overflow: hidden;
 }
 
 section {
@@ -39,6 +40,7 @@ h3, h4, p {
 
 a {
   font-family: 'Major Mono Display', monospace;
+  overflow: hidden;
 }
 
 
